<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Spinner android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"/>
    
    <EditText android:id="@+id/freq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/note"
        android:layout_toLeftOf="@+id/hz"
        android:inputType="numberDecimal"
        android:maxLength="7" />
    
    <TextView android:id="@+id/hz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/hz"
        android:textSize="20sp" />
    
    <ToggleButton android:id="@+id/play_stop"
        android:layout_width="200dp"
    	android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
    	android:textOn="@string/stop"
    	android:textOff="@string/play" />
    
</RelativeLayout>
